# ItinerarAI

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
docker/: backend.Dockerfile
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.css  App.jsx  styles.css
frontend/src/components/: LoadingOverlay.css  LoadingOverlay.jsx  LoadingOverlay.new.jsx
utils/: places.py  prompt_generation.py  weather.py
